cmake_minimum_required(VERSION 3.22)
project(untitled18)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled18 main.cpp Branch.cpp Branch.h Item.cpp Item.h Computer.cpp Computer.h Mouse.cpp Mouse.h Tablet.cpp Tablet.h Keyboard.cpp Keyboard.h PeripheralDevice.cpp PeripheralDevice.h HWExceptions.h MainOffice.cpp MainOffice.h Branch.cpp Branch.cpp)
